VELORA_PREMIUM_FASHION/helm/velora/rendered-example/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: velora
  namespace: velora
  labels:
    helm.sh/chart: velora-1.0.0
    app.kubernetes.io/name: velora
    app.kubernetes.io/instance: velora
    app.kubernetes.io/version: "3.0.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: velora
    app.kubernetes.io/instance: velora
